Testcases for udp and tcp

--- a/apps/dnsserver/test/test.config
+++ b/apps/dnsserver/test/test.config
@@ -1,7 +1,7 @@
 [{dnsserver, [
   {tcp_port, 8053},
-  {tcp_nof_accept_sockets, 20},
-  {tcp_close_socket, false},
+  {tcp_nof_accept_sockets, 3},
+  {tcp_close_socket, true},
   {tcp_function, {tcp_echo_server, handle_data, 2}},
   {udp_port, 8053},
   {udp_function, {udp_echo_server, handle_data, 2}}]
