--- a/rebar.config
+++ b/rebar.config
@@ -7,13 +7,16 @@
 {require_otp_vsn, "18"}.
 
 {deps, [
-  {lager, {git, "https://github.com/basho/lager.git", {tag, "3.0.2"}}}
+  {lager, {git, "https://github.com/basho/lager.git", {tag, "3.1.0"}}}
+%% TODO  {dns_erlang, {git, "https://github.com/rikribbers/dns_erlang.git", {branch, "rebar3"}}}
 ]}.
 
-{relx, [{release, {dnsserver, "0.1.0"},
+
+{relx, [{release, {dnssrmerver, "0.1.0"},
   [dnsserver,
     lager,
-    %% needed for starting observer
+    %% needed
+    %% for starting observer
     runtime_tools,
     sasl]},
 
@@ -30,3 +33,4 @@
   {include_erts, true}]}]
 }]
 }.
+
