Restructering and updates to tcp

--- a/rebar.config
+++ b/rebar.config
@@ -7,13 +7,15 @@
 {require_otp_vsn, "18"}.
 
 {deps, [
-  {lager, {git, "https://github.com/basho/lager.git", {tag, "3.1.0"}}}
-%% TODO  {dns_erlang, {git, "https://github.com/rikribbers/dns_erlang.git", {branch, "rebar3"}}}
+  {lager, {git, "https://github.com/basho/lager.git", {tag, "3.1.0"}}},
+  {dns_erlang, {git, "https://github.com/rikribbers/dns_erlang.git", {branch, "provider"}}}
 ]}.
 
 
-{relx, [{release, {dnssrmerver, "0.1.0"},
+{relx, [{release, {dnsserver, "0.1.0"},
   [dnsserver,
+    tcp,
+    udp,
     lager,
     %% needed
     %% for starting observer
@@ -31,6 +33,6 @@
 
 {profiles, [{prod, [{relx, [{dev_mode, false},
   {include_erts, true}]}]
-}]
+  }]
 }.
 
