--- a/rebar.config
+++ b/rebar.config
@@ -4,11 +4,13 @@
   {parse_transform, lager_transform}
 ]}.
 
-{require_otp_vsn, "18"}.
+{require_otp_vsn, "19"}.
+
+{plugins, [rebar3_eqc]}.
 
 {deps, [
-  {lager, {git, "https://github.com/basho/lager.git", {tag, "3.1.0"}}},
-  {dns_erlang, {git, "https://github.com/rikribbers/dns_erlang.git", {branch, "provider"}}}
+  {lager, {git, "https://github.com/basho/lager.git", {tag, "3.2.1"}}}
+ %% {dns_erlang, {git, "https://github.com/rikribbers/dns_erlang.git", {branch, "provider"}}}
 ]}.
 
 
